--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <body>
         <div id="app"></div>
 
+        <script>
+            alert("mehr als die Dashoard Seite gibt es aus Zeitgründen nicht");
+        </script>
+
         <!-- react  -->
         <script
             crossorigin
