--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <div id="app"></div>
 
         <script>
-            alert("mehr als die Dashoard Seite gibt es aus Zeitgründen nicht");
+            alert(
+                "mehr als die Dashoard Seite gibt es aus Zeitgründen nicht (und die ist nicht mal fertig - fuck)"
+            );
         </script>
 
         <!-- react  -->
